--- a/learn_ionic/package.json
+++ b/learn_ionic/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/android": "6.1.2",
     "@capacitor/app": "6.0.1",
+    "@capacitor/camera": "^6.0.2",
     "@capacitor/core": "6.1.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/ios": "6.1.2",
